mod_alias: Enforce sanity in args to Redirect PR 44729

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@778942 13f79535-47bb-0310-9956-ffa450edef68